objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>ARRA_Compliance__c</fullName>
        <formula>text( Opportunity__r.ARRA_Compliance__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARRA Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Coating__c</fullName>
        <label>Age of Coating</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Foam__c</fullName>
        <label>Age of Foam</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Roof_yrs__c</fullName>
        <label>Age of Roof (yrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Barrier__c</fullName>
        <label>Air Barrier</label>
        <picklist>
            <controllingField>Single_Ply_Attachment__c</controllingField>
            <picklistValues>
                <fullName>Monolithic Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vapor or Air barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Existing Roof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anchoring_Allowed__c</fullName>
        <label>Anchoring Allowed:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_of_roof_shading_noted_on_drawing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Areas of roof shading noted on drawing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Roof_Dimensions_Ft_x_Ft__c</fullName>
        <label>Available Roof Dimensions Ft x Ft</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Dimension_Height_Ft_x_Ft__c</fullName>
        <label>Building Dimension Height Ft x Ft</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Built_Up_Roof__c</fullName>
        <label>Built-Up Roof</label>
        <picklist>
            <picklistValues>
                <fullName>Capsheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gravel Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smooth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRSM_Email_Address__c</fullName>
        <formula>Opportunity__r.CRSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRSM Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRSM_Email__c</fullName>
        <label>CRSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRSM_Name__c</fullName>
        <formula>Opportunity__r.CRSM__r.FirstName   + &quot; &quot; + Opportunity__r.CRSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coating_Type__c</fullName>
        <label>Coating Type</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Monitoring_Subscription__c</fullName>
        <label>Commercial Monitoring Subscription</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year (Included)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years (Add&apos;l Cost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Years (Add&apos;l Cost)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DO_NOT_INCLUDE_MONITORING_200_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT INCLUDE MONITORING  ($200 Credit)</description>
        <label>DO NOT INCLUDE MONITORING  ($200 Credit)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Email__c</fullName>
        <label>Dealer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact_Phone__c</fullName>
        <label>Dealer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <label>Dealer Contact</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Suppiled_Array_Layout_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Suppiled Array Layout/Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <formula>Opportunity__r.Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Sup_Serv_for_Ballasted_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Design Support Service for Ballasted Solutions for Additional Cost (4-Day Service Level Agreement) - Ballasted Systems</inlineHelpText>
        <label>Design Sup. Serv for Ballasted Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Support_Service_Information__c</fullName>
        <formula>&quot;Please make sure to fill out section &apos;Roof Condition&apos; to purchase this service.&quot; + 
BR() + 
&quot;This service will include:&quot; + BR() 
+BR() +
&quot;(1) Up to 2 AutoCad roof layouts (T10 &amp; T5, if feasible) &quot; +BR() +
&quot;(2) Energy Production Estimates** &quot; +BR() +
&quot;(3) Inverter String Sizing, Preliminary BOM &quot; +BR() +
&quot;(4) Wind Load Analysis &quot; +BR() +
&quot;(5) Product Data Sheets &quot; +
BR() +
&quot;Charges will apply if withdrawn or cancelled&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Support Service Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drainage__c</fullName>
        <label>Drainage</label>
        <picklist>
            <picklistValues>
                <fullName>Gutters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overflow Drains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scuppers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Est_Dist_from_Inv_to_CORE_PV_Superv_Ft__c</fullName>
        <description>Estimated Distance from Inverter to CORE (PV Supervisor) Ft:</description>
        <inlineHelpText>Estimated Distance from Inverter to CORE (PV Supervisor) Ft:</inlineHelpText>
        <label>Est Dist from Inv to CORE (PV Superv) Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Installation_Date__c</fullName>
        <label>Expected Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Address__c</fullName>
        <formula>Opportunity__r.Facility_Address1__c  &amp; &quot; &quot; &amp; BR() +
Opportunity__r.Facility_Address_2__c  &amp; &quot; &quot; &amp;    BR() +
Opportunity__r.Facility_City1__c  &amp;  &quot; &quot; &amp;  Opportunity__r.Facility_State1__c  &amp;  &quot; &quot;&amp; Opportunity__r.Facility_Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foam_Type__c</fullName>
        <label>Foam Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>For_SolarMount_I_Only__c</fullName>
        <defaultValue>&quot;For SolarMount-I Only&quot;</defaultValue>
        <label>For SolarMount-I Only:</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grounding__c</fullName>
        <formula>text( Opportunity__r.Grounding__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grounding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <formula>text(Opportunity__r.Location_of_Installation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>&quot;The Pre-Purchase Form (PPF) is required for all Commercial projects that utilize SunPower product(s).  This process not only allows us to review the planned design to help troubleshoot and potentially suggest enhancements, but it is the prerequisite to generate a Bill of Materials (BOM). Therefore, please complete  this Pre-Purchase Form (PPF) with accurate information, so the SunPower Technical Team can respond promptly.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_1__c</fullName>
        <formula>text(  Opportunity__r.Invertor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter #1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_2__c</fullName>
        <formula>text( Opportunity__r.Inverter_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter #2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_3__c</fullName>
        <formula>text( Opportunity__r.Inverter_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter #3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Output_Voltage__c</fullName>
        <label>Inverter Output Voltage</label>
        <picklist>
            <picklistValues>
                <fullName>208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 100kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 135kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 225kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satcon 250 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 30kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satcon 375 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satcon 500 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 50kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon 75kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA SC-250-US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA SC-500-US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA Tower 42kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-10000M-TL-3-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR–11400 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-12000M-TL-3-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-15000M-TL-3-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-17000M-TL-3-EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-2500 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3300 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-3800 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4000 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-4600 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-5000 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-6000 M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_slope_of_roof_less_than_1_12_5__c</fullName>
        <label>Is slope of roof less than 1:12 (~5°)</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Max_Roof_Space_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max Roof Space Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified_Bitumen__c</fullName>
        <label>Modified Bitumen</label>
        <picklist>
            <picklistValues>
                <fullName>Capsheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gravel Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smooth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Orientation_SolarMount_I_Only__c</fullName>
        <label>Module Orientation: (SolarMount -I Only)</label>
        <picklist>
            <picklistValues>
                <fullName>N-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mounting_System__c</fullName>
        <formula>text(Opportunity__r.Mounting_system1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mounting System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_PV_Tiles_Modules__c</fullName>
        <label>Number of PV Tiles/Modules</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupancy_Ex_Schedule_II__c</fullName>
        <label>Occupancy: (Ex. Schedule II)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Comments_on_conditions_of_the_roof__c</fullName>
        <label>Other Comments on conditions of the roof</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Single_Ply__c</fullName>
        <label>Other (Single-Ply)</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_SolarMount_I_Applications__c</fullName>
        <label>Other (SolarMount-I Applications)</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Requirement_eg_CSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Production Based Incentive (PBI) Requirement (e.g CSI)</description>
        <inlineHelpText>Production Based Incentive (PBI) Requirement (e.g CSI)</inlineHelpText>
        <label>PBI Requirement (e.g CSI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLUS_PV_Supervisor_Enclosure_Addt_l__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PLUS (PV Supervisor + Enclosure)</description>
        <inlineHelpText>For additional cost</inlineHelpText>
        <label>PLUS (PV Supervisor + Enclosure) (+cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PREMIUM_PLUS_Weather_Station_cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PREMIUM(PLUS + Weather Station)(+cost)</description>
        <inlineHelpText>Additional Cost</inlineHelpText>
        <label>PREMIUM(PLUS + Weather Station)(+cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PV_Type__c</fullName>
        <formula>text( Opportunity__r.PV_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parapet_Height_ft__c</fullName>
        <label>Parapet Height (ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parnter_Name__c</fullName>
        <formula>Opportunity__r.Partner_Account_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parnter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pixs_of_Roof_Site_Reversed_Elevation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Photos of the Roof, Site, and Reversed Elevation (From All Components Directions)</description>
        <inlineHelpText>Photos of the Roof, Site, and Reversed Elevation (From All Components Directions)</inlineHelpText>
        <label>Pixs of Roof, Site &amp; Reversed Elevation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Delivery__c</fullName>
        <formula>Opportunity__r.Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <formula>text( Opportunity__r.Quantity_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity #1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <formula>text( Opportunity__r.Quantity_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity #2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <formula>text( Opportunity__r.Quantity_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity #3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rafter_Orientation__c</fullName>
        <label>Rafter Orientation:</label>
        <picklist>
            <picklistValues>
                <fullName>E-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N-S</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rafter_Spacing_inches__c</fullName>
        <label>Rafter Spacing (inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Items__c</fullName>
        <formula>&quot;(1) Dimensions Roof Drawing (CAD file is preferred                              &quot; + 
BR() +                                            
&quot;(2) Type, Height, and Dimensions of Obstruction(s)                              &quot; +  
BR()  +                                         
&quot;(3) Shading Analysis (if available) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Items:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Grade_Meter_Quantity__c</fullName>
        <label>Revenue Grade Meter Quantity:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Grade_Meter_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Grade Meter Required:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Drawing_Array_Layout_in_AutoCAD_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Roof Drawing/Array Layout in AutoCAD/PDF Electronic format or PDF. (For T5, T10, Solarmount-I &amp; ULA)</description>
        <inlineHelpText>Roof Drawing and/or Array Layout in AutoCAD Electronic format or PDF. (For T5, T10, Solarmount-I &amp; ULA)</inlineHelpText>
        <label>Roof Drawing/Array Layout in AutoCAD/PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Height__c</fullName>
        <formula>Opportunity__r.Roof_Height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roof Height</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Observations__c</fullName>
        <label>Roof Observations</label>
        <picklist>
            <picklistValues>
                <fullName>Blisters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fractures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ponding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftAreas</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Roof_Orientation__c</fullName>
        <formula>text( Opportunity__r.Roof_Orientation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roof Orientation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Slope_Estimated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Slope - Estimated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Slope_Measured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Slope - Measured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Tile__c</fullName>
        <label>Roof Tile:</label>
        <picklist>
            <picklistValues>
                <fullName>T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Warranty_Expiration_Date__c</fullName>
        <label>Roof Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Warranty__c</fullName>
        <label>Roof Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof__c</fullName>
        <label>Roof</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reroof</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seam_Spacing_For_metal_Roofs_inches__c</fullName>
        <label>Seam Spacing (For metal Roofs) inches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Ply_Attachment__c</fullName>
        <label>Single-Ply Attachment</label>
        <picklist>
            <controllingField>Single_Ply__c</controllingField>
            <picklistValues>
                <fullName>Ballasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Adhered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanically Attached</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Single_Ply__c</fullName>
        <label>Single-Ply</label>
        <picklist>
            <picklistValues>
                <fullName>EPDM (Un-reinforced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDM (Reinforced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypalon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slope_of_the_roof_degrees__c</fullName>
        <label>Slope of the roof (degrees)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SolarMount_I_Applications__c</fullName>
        <label>SolarMount-I Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Trapezoidal Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Seam Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinusoidal Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SolarMount_I__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SolarMount-I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>South_Direction_Noted_on_drawing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&quot;South&quot; Direction Noted on drawing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surface_Finish__c</fullName>
        <label>Surface Finish</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Information__c</fullName>
        <formula>&quot;Please make sure the System Information section within the Opportunity Record is completed first. This section is shown within this form, but it is read-only. Also, if there is more than one site, please create an Opportunity for each site. Each different site must have a different Opportunity Name, but should share the same Account Name.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Information:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_kWp__c</fullName>
        <formula>Opportunity__r.System_Size_KwP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size(kWp)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <formula>Installation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System_Size_kw__c</fullName>
        <label>Target System Size (kw)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Roof_Obstruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type of Roof Obstruction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ULA</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>